gccida/c0/find_regno_note
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/find_regno_note/src/rtlanal.c:2266:33: error: must use 'enum' tag to refer to type 'reg_note'
rtx  find_regno_note( rtx insn, reg_note kind, unsigned int regno) 
                                ^
                                enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/find_regno_note/src/rtlanal.c:2282:53: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
for ( link = insn[3].fld[0].rtx; link; link = ( rtx)link[1] ) 
                                                    ^~~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/find_regno_note/src/rtlanal.c:2328:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( mode_class_0[( unsigned __int8)BYTE2( *( _DWORD *)link->fld[0].rtwint)] != MODE_COMPLEX_INT ) 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/find_regno_note/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/find_regno_note/src/rtlanal.c:2329:7: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v12 = mode_class_0[( unsigned __int8)BYTE2( *( _DWORD *)link->fld[0].rtwint)] == MODE_COMPLEX_FLOAT; 
      ^~~~~~~~~~~~
      mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/find_regno_note/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/find_regno_note/src/obj/rtlanal.o] Error 1
